sql/sql_class.h
@@ -1360,6 +1360,7 @@ public:
   Rows_log_event* binlog_get_pending_rows_event() const;
   void            binlog_set_pending_rows_event(Rows_log_event* ev);
   int binlog_flush_pending_rows_event(bool stmt_end);
+  int binlog_remove_pending_rows_event(bool clear_maps);
 
 private:
   uint binlog_table_maps; // Number of table maps currently in the binlog
